fix Java 17 tests