@@ -281,7 +281,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire-plugin.version}</version>
                     <configuration>
-                        <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>
+                        <argLine>-XX:+AllowRedefinitionToAddDeleteMethods --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED</argLine>
                     </configuration>
                 </plugin>
 
